assets/css/style.css
/* ... */
#get-screenshot:hover {
  opacity: 1;
}

.heatmap-modal-button-container {
  margin-top: 10px;
}

#heatmap-btn {
  border-radius: 10px;
  margin-top: auto;
  border: none;
  cursor: pointer;
  background: #d7d7d7;
  font-size: 12px;
  width: 200px;
  margin-left: calc(100% - 234px);
  padding: 4px;
}

#heatmap-btn:hover {
  background: #e1e1e1;
}

#get-heatmap {
  margin-top: 5px;
  cursor: pointer;
  width: 100%;
  height: 35px;
  font-size: 14px;
  background-color: #787878;
  color: white;
  border: 1px solid #3c3c3c;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  opacity: 0.75
}

#get-heatmap:hover {
  opacity: 1;
}

#get-heatmap.button-loading {
  pointer-events: none;
}

#get-heatmap.button-loading .button-text {
  display: none;
}

#heatmap-dates-wrapper {
  display: flex;
  align-items: start;
  flex-flow: column;
}

#heatmap-dates {
  resize: none;
  font-size: 13px;
  width: 242px;
}

#heatmap-dates p.description {
  font-size: 10px;
}

.loader {
  border: 6px solid #f3f3f3;
  border-radius: 50%;
  border-top: 6px solid #007bff;
  width: 60px;
  height: 60px;
  -webkit-animation: spin 2s linear infinite;
  animation: spin 1.5s linear infinite;
}

.button-loading::after {
  content: "";
  width: 16px;
  height: 16px;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  margin: auto;
  border: 4px solid transparent;
  border-top-color: #ffffff;
  border-radius: 50%;
  -webkit-animation: spin 1s ease infinite;
          animation: spin 1s ease infinite;
}

@-webkit-keyframes spin {
  from {
    -webkit-transform: rotate(0turn);
            transform: rotate(0turn);
  }

  to {
    -webkit-transform: rotate(1turn);
            transform: rotate(1turn);
  }
}

@keyframes spin {
  from {
    -webkit-transform: rotate(0turn);
            transform: rotate(0turn);
  }

  to {
    -webkit-transform: rotate(1turn);
            transform: rotate(1turn);
  }
}

.button-tooltip {
  z-index: 100001;
  position: absolute;
  line-height: 18px;
  background-color: #272727;
  border: 1px solid #3a3a3a;
  opacity: 1;
  border-radius: 2px;
  overflow: visible;
  -webkit-box-shadow: 2px 2px 3px rgba(0, 0, 0, 0.3);
  box-shadow: 2px 2px 3px rgba(0, 0, 0, 0.3);
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  -o-user-select: none;
  user-select: none;
  display: none;
}

.button-tooltip p {
  max-width: 250px;
  margin-top: 0px;
  margin-bottom: -11px;
  margin-left: 0px;
  margin-right: 0px;
  padding-top: 9px;
  padding-bottom: 19px;
  padding-left: 20px;
  padding-right: 14px;

  font: 13px "Helvetica Neue", Sans-Serif;
  color: white;
}

.button-tooltip a {
  color: #8b8bff;
}

.button-tooltip p::before {
  content: "";
  position: absolute;
  width: 20px;
  height: 12px;
  background-repeat: no-repeat;
  background-image: url('../img/bubble_edge_horizontal.png');
  background-position: 50% 100%;
}

.button-tooltip.left p::before {
  left: 9%;
}

.button-tooltip.right p::before {
  right: 9%;
}

.button-tooltip.bottom p::before {
  bottom: -12px;
}

.button-tooltip.top p::before {
  -webkit-transform: rotate(180deg);
  -ms-transform: rotate(180deg);
  transform: rotate(180deg);
  top: -12px;
}

.always-selectable {
  -webkit-user-select: auto;
  -moz-user-select: text;
  -ms-user-select: element;
  -o-user-select: auto;
  user-select: text;
}

.customDialog {
  background-color: #f1f1f1;
  min-width: 250px !important;
}

.customDialog .ui-widget-content {
  border: none;
  background: inherit;
}

.customDialog .ui-dialog-buttonpane {
  margin-top: 0px;
  padding: 0em 1em 0em .4em;
}

.customDialog .ui-dialog-buttonset .ui-button {
  background: #5b5b5b;
  color: white;
}

.ui-dialog.ui-widget.customDialog .disclaimerModal {
  margin-bottom: 0px;
}

div.pac-container {
  z-index: 99999999999 !important;
}

.reachOutModal div, .backtraceSettingsModal div, .methodologyModal div {
  font-size: 13px;
}

.backtraceSettingsModal td {
  padding-right: 30px;
  padding-bottom: 5px;
}

.backtraceSettingsModal .switch {
  font-size: 11px;
  width: 40px;
  top: -1px;
}

.reachOutModal div a, .methodologyModal div a  {
  color: #007de1;
}

.tosModal .content {
  overflow-y: auto;
  font-size: 14px;
  text-align: justify;
  padding: 10px;
  word-break: break-word;
}

.tosModal .content a {
  color: #2196f3;
}

.tosModal .footer {
  padding-top: 20px;
}

.tosModal .footer label, .tosModal .footer input[type=checkbox] {
  cursor: pointer;
}

.shareViewModal.ui-dialog-content, .reachOutModal.ui-dialog-content, .methodologyModal.ui-dialog-content {
  -webkit-touch-callout: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  overflow: hidden;
  padding-bottom: 20px;
}

.shareViewModal .share-link-container-content, .shareViewModal .embed-link-container {
  font-size: 13px;
  border: 1px solid #e0e0e0;
  background-color: #e0e0e0;
  border-radius: 8px;
  color: #1e88e5;
  width: 255px !important;
  padding: 8px;
}

.shareViewModal .shareurl, .shareViewModal .shareembed {
  width: 230px !important;
  height: 16px !important;
  overflow: hidden;
  margin: 0px !important;
  word-break: break-all;
}

.shareViewModal .close-modal, .cityPickerModal .close-modal, .searchModal .close-modal, .reachOutModal .close-modal, .backtraceSettingsModal  .close-modal, .methodologyModal .close-modal, .exportHeatMapModal .close-modal {
  background: url('../img/close.png') center center no-repeat;
  background-size: 20px 20px;
  display: inline-block;
  width: 20px;
  height: 20px;
  cursor: default;
  opacity: 0.67;
  position: absolute;
  right: 12px;
  top: 10px;
  cursor: pointer;
}

.searchModal .close-modal {
  right: 12px;
}
/* ... */

